# wfc3tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  RECON-INFO  defsetup.py  new_setup.cfg  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  ci_workflows.yml  tests.yml
.tox/py312/: .tox-info.json
doc/: Makefile  make.bat
doc/source/: calwf3.rst  calwf3_hstcal.rst  conf.py  embedsub.rst  history.rst  index.rst  ir_pipeline.rst  pstack.rst  runastrodriz.rst  sampinfo.rst  sub2full.rst  uvis_pipeline.rst  wf32d.rst  wf3ccd.rst  wf3ir.rst  wf3rej.rst  wf3sum.rst
docs/: conf.py  index.rst  rtd-pip-requirements  rtd_environment.yaml
docs/_static/: custom.css
docs/_static/css/: theme.css_t
docs/wfc3tools/: calwf3.rst  embedsub.rst  history.rst  ir_pipeline.inc  pstack.rst  pstat.rst  sampinfo.rst  sub2full.rst  utils.rst  uvis_pipeline.inc  wf32d.rst  wf3ccd.rst  wf3cte.rst  wf3ir.rst  wf3rej.rst  wfc3ir_tools.rst
lib/wfc3tools/: __init__.py  calwf3.help  calwf3.py  embedsub.py  ir_pipeline.help  pstack.help  pstack.py  pstat.help  pstat.py  runastrodriz  runastrodriz.help  runastrodriz.py  sampinfo.help  sampinfo.py  sub2full.help  sub2full.py  util.py  uvis_pipeline.help  version.py  wf32d.help  wf32d.py  wf3ccd.help  wf3ccd.py  wf3cte.help  wf3cte.py  wf3ir.help  wf3ir.py  wf3rej.help  wf3rej.py  wfc3tools.help
lib/wfc3tools/htmlhelp/: .buildinfo  calwf3.html  embedsub.html  genindex.html  history.html  index.html  ir_pipeline.html  objects.inv  pstack.html  pstat.html  py-modindex.html  runastrodriz.html  sampinfo.html  search.html  searchindex.js  sub2full.html  uvis_pipeline.html  wf32d.html  wf3ccd.html  wf3cte.html  wf3ir.html  wf3rej.html  wfc3tools.html
lib/wfc3tools/htmlhelp/_sources/: calwf3.txt  embedsub.txt  history.txt  index.txt  ir_pipeline.txt  pstack.txt  pstat.txt  runastrodriz.txt  sampinfo.txt  sub2full.txt  uvis_pipeline.txt  wf32d.txt  wf3ccd.txt  wf3cte.txt  wf3ir.txt  wf3rej.txt
lib/wfc3tools/htmlhelp/_static/css/: theme.css
test/: test_calwf3.py
wfc3tools/: __init__.py  calwf3.py  embedsub.py  pstack.py  pstat.help  pstat.py  sampinfo.py  sub2full.py  util.py  version.py  wf32d.py  wf3ccd.py  wf3cte.py  wf3ir.py  wf3rej.py  wfc3ir_tools.py
wfc3tools/tests/: example_test.py  helpers.py  test_calwf3.py  test_pstack.py  test_pstack_pstat.py  test_pstat.py  test_sampinfo.py  test_sub2full.py
