[metadata]
name = wfc3tools
version = 1.3.1
author = Megan Sosey
author-email = help@stsci.edu
summary = Python Tools for WFC3 Data
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.7
requires-dist = 
	stsci.tools
	numpy (>=1.5.1)
    astropy (>=1.0)
    scipy

[files]
packages_root = lib
packages = wfc3tools
package_data = 
	wfc3tools = pars/* *.help htmlhelp/*.html htmlhelp/_images/*.png htmlhelp/_images/math/*.png
                htmlhelp/_static/*.png  htmlhelp/_static/css/*.css  htmlhelp/*.py 
                htmlhelp/_static/*.js   htmlhelp/_static/js/*.js htmlhelp/_static/fonts/*
                htmlhelp/_sources/*.txt
    
include_dirs = numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[global]
setup_hooks = 
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

