[metadata]
name = wfc3tools
description = Python Tools for HST WFC3 Data
long_description = A package which contains wrappers for the calwf3 reduction scripts and tools to aid data analysis.
author = STScI
author_email = help@stsci.edu
license = BSD
github_project = spacetelescope/wfc3tools
description_file = README.rst
url = http://wfc3tools.readthedocs.io/
homepage = http:://wfc3tools.readthedocs.io/
project_urls =
    Bug Reports = https://github.com/spacetelescope/wfc3tools/issues/
    Source = https://github.com/spacetelescope/wfc3tools/
    Help = https://hsthelp.stsci.edu
classifier=
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe=False
python_requires = >=3.9
setup_requires =
    setuptools_scm
install_requires =
    astropy>=4.2.0
    numpy>=1.21.0
    matplotlib>=3.5.1
    stsci.tools>=4.0.1
    scipy>=1.8.0

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme